--- a/Sumdays/app/src/main/res/layout/include_nav_center_write.xml
+++ b/Sumdays/app/src/main/res/layout/include_nav_center_write.xml
@@ -3,13 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/navigation_bar"
     android:layout_width="match_parent"
-    android:layout_height="130dp"
+    android:layout_height="115dp"
     android:background="@android:color/transparent">
 
     <!-- ✅ 위쪽 선 -->
     <View
         android:layout_marginTop="30dp"
-        android:layout_width="110dp"
+        android:layout_width="120dp"
         android:layout_height="3dp"
         android:layout_gravity="top|start"
         android:layout_marginStart="20dp"
@@ -17,7 +17,7 @@
 
     <View
         android:layout_marginTop="30dp"
-        android:layout_width="110dp"
+        android:layout_width="120dp"
         android:layout_height="3dp"
         android:layout_gravity="top|end"
         android:layout_marginEnd="20dp"
@@ -42,12 +42,31 @@
                 android:id="@+id/btnCalendar"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
+                android:layout_marginRight="-15dp"
                 android:layout_marginBottom="-15dp"
-                android:layout_marginRight="-35dp"
+                android:background="?attr/selectableItemBackgroundBorderless"
                 android:padding="0dp"
                 android:scaleType="fitCenter"
-                android:background="?attr/selectableItemBackgroundBorderless"
                 android:src="@drawable/ic_calendar"
+                app:tint="@color/icon_color" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center">
+
+            <ImageButton
+                android:id="@+id/statistic_btn"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginRight="-10dp"
+                android:layout_marginBottom="-15dp"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:padding="0dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_stats_grey"
                 app:tint="@color/icon_color" />
         </LinearLayout>
 
@@ -59,19 +78,37 @@
             android:gravity="center">
 
 
-            <ImageButton
-                android:id="@+id/btnSum"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
-                android:src="@drawable/nav_fox_button"
-                android:background="@android:color/transparent"
-                android:scaleType="fitCenter"
-                android:layout_gravity="center_horizontal|bottom"
-                android:translationY="-30dp"
-                app:tint="@null"/>
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/btnDaily"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_edit_white"
+                android:translationY="-18dp"
+                app:backgroundTint="@color/dark_item_card_background"
+                app:fabCustomSize="62dp"
+                app:maxImageSize="45dp"
+                app:tint="@android:color/white" />
         </LinearLayout>
 
         <!-- 오른쪽 버튼 -->
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center">
+            <ImageButton
+                android:id="@+id/btnSearch"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginBottom="-15dp"
+                android:layout_marginLeft="-10dp"
+                android:padding="0dp"
+                android:scaleType="fitCenter"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:src="@drawable/ic_search"
+                app:tint="@color/icon_color"/>
+        </LinearLayout>
+
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -82,7 +119,7 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginBottom="-15dp"
-                android:layout_marginLeft="-35dp"
+                android:layout_marginLeft="-15dp"
                 android:padding="0dp"
                 android:scaleType="fitCenter"
                 android:background="?attr/selectableItemBackgroundBorderless"
