--- a/Sumdays/app/src/main/res/layout/activity_calendar.xml
+++ b/Sumdays/app/src/main/res/layout/activity_calendar.xml
@@ -7,17 +7,26 @@
     android:layout_height="match_parent"
     tools:context=".CalendarActivity">
 
-
-    <ImageButton
-        android:id="@+id/statistic_btn"
-        android:src="@drawable/ic_stats_grey"
-        android:background="@android:color/transparent"
+    <LinearLayout
+        android:id="@+id/top_container"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:orientation="horizontal"
+        android:gravity="end|center_vertical"
         android:layout_marginTop="8dp"
+        android:paddingEnd="16dp"
+        android:paddingStart="16dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageButton
+            android:id="@+id/setting_menu"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/ic_setting_menu"
+            android:background="@android:color/transparent" />
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/month_header"
@@ -26,7 +35,7 @@
         android:orientation="horizontal"
         android:gravity="center_vertical"
         android:padding="0dp"
-        app:layout_constraintTop_toBottomOf="@id/statistic_btn"
+        app:layout_constraintTop_toBottomOf="@id/top_container"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
