--- a/Sumdays/app/src/main/res/layout/include_nav_center_write.xml
+++ b/Sumdays/app/src/main/res/layout/include_nav_center_write.xml
@@ -1,130 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/navigation_bar"
     android:layout_width="match_parent"
-    android:layout_height="115dp"
-    android:background="@android:color/transparent">
+    android:layout_height="match_parent"
+    android:foregroundGravity="center">
 
-    <!-- ✅ 위쪽 선 -->
-    <View
-        android:layout_marginTop="30dp"
-        android:layout_width="120dp"
-        android:layout_height="3dp"
-        android:layout_gravity="top|start"
-        android:layout_marginStart="20dp"
-        android:background="@color/dark_divider"/>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btnDaily"
+        android:tag="nav_center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:src="@drawable/ic_edit_white"
+        android:translationY="-18dp"
+        app:backgroundTint="@color/dark_item_card_background"
+        app:fabCustomSize="62dp"
+        app:maxImageSize="45dp"
+        app:tint="@android:color/white" />
 
-    <View
-        android:layout_marginTop="30dp"
-        android:layout_width="120dp"
-        android:layout_height="3dp"
-        android:layout_gravity="top|end"
-        android:layout_marginEnd="20dp"
-        android:background="@color/dark_divider"/>
-
-
-    <!-- ✅ 버튼 3등분 영역 -->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:gravity="center">
-
-        <!-- 왼쪽 버튼 -->
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center">
-
-            <ImageButton
-                android:id="@+id/btnCalendar"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginRight="-15dp"
-                android:layout_marginBottom="-15dp"
-                android:background="?attr/selectableItemBackgroundBorderless"
-                android:padding="0dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/ic_calendar"
-                app:tint="@color/icon_color" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center">
-
-            <ImageButton
-                android:id="@+id/statistic_btn"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginRight="-10dp"
-                android:layout_marginBottom="-15dp"
-                android:background="?attr/selectableItemBackgroundBorderless"
-                android:padding="0dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/ic_stats_grey"
-                app:tint="@color/icon_color" />
-        </LinearLayout>
-
-        <!-- 가운데 버튼 (살짝 위로 띄움) -->
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center">
-
-
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/btnDaily"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_edit_white"
-                android:translationY="-18dp"
-                app:backgroundTint="@color/dark_item_card_background"
-                app:fabCustomSize="62dp"
-                app:maxImageSize="45dp"
-                app:tint="@android:color/white" />
-        </LinearLayout>
-
-        <!-- 오른쪽 버튼 -->
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center">
-            <ImageButton
-                android:id="@+id/btnSearch"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginBottom="-15dp"
-                android:layout_marginLeft="-10dp"
-                android:padding="0dp"
-                android:scaleType="fitCenter"
-                android:background="?attr/selectableItemBackgroundBorderless"
-                android:src="@drawable/ic_search"
-                app:tint="@color/icon_color"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center">
-            <ImageButton
-                android:id="@+id/btnInfo"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginBottom="-15dp"
-                android:layout_marginLeft="-15dp"
-                android:padding="0dp"
-                android:scaleType="fitCenter"
-                android:background="?attr/selectableItemBackgroundBorderless"
-                android:src="@drawable/ic_profile"
-                app:tint="@color/icon_color"/>
-        </LinearLayout>
-    </LinearLayout>
 </FrameLayout>
