--- a/Sumdays/app/src/main/res/layout/include_navigation_bar.xml
+++ b/Sumdays/app/src/main/res/layout/include_navigation_bar.xml
@@ -40,8 +40,8 @@
 
             <ImageButton
                 android:id="@+id/btnCalendar"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_marginRight="-15dp"
                 android:layout_marginBottom="-15dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
@@ -59,8 +59,8 @@
 
             <ImageButton
                 android:id="@+id/statistic_btn"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_marginRight="-10dp"
                 android:layout_marginBottom="-15dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
@@ -70,25 +70,14 @@
                 app:tint="@color/icon_color" />
         </LinearLayout>
 
-        <!-- 가운데 버튼 (살짝 위로 띄움) -->
+        <!-- 가운데 버튼  -->
         <LinearLayout
+            android:id="@+id/nav_center_container"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="center">
-
-
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/btnDaily"
-                android:tag="nav_center"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_edit_white"
-                android:translationY="-18dp"
-                app:backgroundTint="@color/dark_item_card_background"
-                app:fabCustomSize="62dp"
-                app:maxImageSize="45dp"
-                app:tint="@android:color/white" />
+            android:gravity="center"
+            android:orientation="vertical">
         </LinearLayout>
 
         <!-- 오른쪽 버튼 -->
@@ -99,8 +88,8 @@
             android:gravity="center">
             <ImageButton
                 android:id="@+id/btnSearch"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_marginBottom="-15dp"
                 android:layout_marginLeft="-10dp"
                 android:padding="0dp"
@@ -117,8 +106,8 @@
             android:gravity="center">
             <ImageButton
                 android:id="@+id/btnInfo"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_marginBottom="-15dp"
                 android:layout_marginLeft="-15dp"
                 android:padding="0dp"
