--- a/Sumdays/app/src/main/res/layout/item_day_cell.xml
+++ b/Sumdays/app/src/main/res/layout/item_day_cell.xml
@@ -38,6 +38,7 @@
         android:gravity="center"
         android:text="15"
         android:textSize="@dimen/text_size_XS"
+        android:textColor="@color/textColor"
         app:layout_constraintTop_toBottomOf="@id/tv_circle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
