--- a/Sumdays/app/src/main/res/values/colors.xml
+++ b/Sumdays/app/src/main/res/values/colors.xml
@@ -23,6 +23,7 @@
     <color name="black">#000000</color>
     <color name="gray">#9E9E9E</color>
     <color name="gray_dark">#424242</color>
+    <color name="white">#FFFFFF</color>
 
     <color name="dark_background">#282d35</color>
     <color name="dark_item_background">#21262e</color>
