--- a/Sumdays/app/src/main/res/layout/activity_week_stats_detail.xml
+++ b/Sumdays/app/src/main/res/layout/activity_week_stats_detail.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background"
     android:id="@+id/main_detail">
 
     <!-- 1. 헤더 (뒤로가기 버튼) -->
