--- a/Sumdays/app/src/main/res/layout/activity_daily_write.xml
+++ b/Sumdays/app/src/main/res/layout/activity_daily_write.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/write"
+    android:background="@color/background"
     tools:context=".DailyWriteActivity">
 
 
