--- a/Sumdays/app/src/main/res/layout/activity_profile_account.xml
+++ b/Sumdays/app/src/main/res/layout/activity_profile_account.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background"
     android:id="@+id/setting_account_root">
 
     <!-- 고정 헤더 -->
