--- a/Sumdays/app/src/main/res/layout/activity_profile_diary_style.xml
+++ b/Sumdays/app/src/main/res/layout/activity_profile_diary_style.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/setting_dairy_style_root"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/background">
 
     <include
         android:id="@+id/header"
