--- a/Sumdays/app/src/main/res/layout/activity_settings_notification.xml
+++ b/Sumdays/app/src/main/res/layout/activity_settings_notification.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/setting_notification_root">
+    android:id="@+id/setting_notification_root"
+    android:background="@color/background">
 
     <include
         android:id="@+id/header"
