--- a/Sumdays/app/src/main/res/layout/include_settings_header.xml
+++ b/Sumdays/app/src/main/res/layout/include_settings_header.xml
@@ -5,7 +5,8 @@
     android:paddingHorizontal="16dp"
     android:paddingVertical="16dp"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/background">
 
     <ImageView
         android:id="@+id/headerBackIcon"
