--- a/Sumdays/app/src/main/res/layout/item_alarm_time.xml
+++ b/Sumdays/app/src/main/res/layout/item_alarm_time.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingVertical="10dp">
+    android:paddingVertical="10dp"
+    android:background="@color/background">
 
     <!-- 알람 시간 표시 (예: 20:00) -->
     <TextView
