--- a/Sumdays/app/src/main/res/layout/item_day_cell.xml
+++ b/Sumdays/app/src/main/res/layout/item_day_cell.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingTop="6dp"
-    android:paddingBottom="6dp">
+    android:paddingBottom="6dp"
+    android:background="@color/background">
 
     <TextView
         android:id="@+id/tv_circle"
