design: make light / dark theme

--- a/Sumdays/app/src/main/res/layout/activity_daily_read.xml
+++ b/Sumdays/app/src/main/res/layout/activity_daily_read.xml
@@ -42,8 +42,7 @@
             android:src="@drawable/ic_arrow_back_white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/date_text"
-            app:layout_constraintTop_toTopOf="parent"
-            app:tint="@android:color/white" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/next_day_button"
@@ -53,8 +52,7 @@
             android:src="@drawable/ic_arrow_forward_white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/date_text"
-            app:layout_constraintTop_toTopOf="parent"
-            app:tint="@android:color/white" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/edit_memos_button"
